finish first page of big picture section
Signed-off-by: Emily Rodriguez <ecrodriguez@mitre.org>

--- a/courses/big-picture/03.md
+++ b/courses/big-picture/03.md
@@ -10,6 +10,8 @@ Think about what is understood and obvious and what is not. Ex: Add function - t
 Define the problem and establish the objective.
 These are your boundaries. Stay within these boundaries.
 
-Describe the necessary steps from start to end required to achieve the objective.
+At a minimum, you need:
+1. an overview system architecture (OV1)
+2. a diagram of the dataflow (context diagram)
 
-There are bodies that give standards and examples - IEEE, etc.
+If your application uses business logic or third party code, create an archimate diagram.
