finish give context section
Signed-off-by: Emily Rodriguez <ecrodriguez@mitre.org>

--- a/courses/big-picture/02.md
+++ b/courses/big-picture/02.md
@@ -5,7 +5,43 @@ author: Emily
 headerDepth: 3
 ---
 
-- Objective
-- Big Picture View
-- Importance
-- Stakeholders
+## 1 What Context is Relevant?
+Readers need context, or a big picture view, of the content to make it worth something to them. This may include:
+
+- What the purpose is of creating the content
+- What other systems or processes are relevant to this content
+- Why the content is import
+- Who the stakeholders are for the content
+
+## 2 How to Give Context
+
+### 2.1 Provide a background statement first
+When relevant, provide a background sentence or paragraph that gives context to the writing. 
+
+### 2.2 Include the purpose, method, or result
+When relevant, provide a method or result of a an action. [Purdue University's Career Handbook](https://user-52947541.cld.bz/2023-2024-Purdue-University-Career-Success-Handbook/18/) describes this with respect to writing powerful resumes. They share a formula of `SKILL + TASK + PURPOSE/METHOD/RESULT`. The purpose explains why the task was done. The method explains how it was done. The result explains what happened because of the task. This pattern is also useful when considering any software documentation. Sometimes none of those attributes will be useful to a piece of writing, but when they are useful, they can provide more context to the reader.
+
+We saw examples of this in [the toothbrush example](../complete/04.md) from the Be Complete section. When stating several instructions, we provided either a purpose, method, or result to give more context, particularly for reader who may be experiencing this for the first time.
+
+`Squeeze the toothpaste onto the toothbrush bristles to prepare for teeth cleaning.` 
+
+### 2.3 Understand stakeholders
+Who has the stake in this documentation, software, or process. Is it only the reader? Is it anyone else? For example, a an installation guide may be useful to a user of the software, but it could also be used be a sales representative to explain and sell the software for ease of installation. Sometimes it may be useful to explain the stakeholders in writing. Other times, it may be better to understand and consider this to cater the big picture context to express those motivations.
+
+## 3 Put it in Practice!
+
+Add a purpose, method, or result to the following statement to provide more context for the readers and stakeholders.
+
+`Node.js and npm are required to run the application.`
+
+::: details Suggested Answer
+**Add purpose:**
+Node.js and npm are required to run the application because the application is a Node app which is built and run locally on the machine.
+
+**Add method:**
+Node.js and npm are required to run the application which is done by installing Node.js and npm locally, running the `npm install` command to install any application dependencies, and then running the `npm run docs:dev` command to build a local build of the application.
+
+**Add result:**
+Node.js and npm are required to run the application, resulting in a locally build Node web application with training content for writing software documentation. 
+:::
+
