finish diagram section
Signed-off-by: Emily Rodriguez <ecrodriguez@mitre.org>

--- a/courses/big-picture/03.md
+++ b/courses/big-picture/03.md
@@ -5,13 +5,37 @@ author: Emily
 headerDepth: 3
 ---
 
-Think about what is understood and obvious and what is not. Ex: Add function - the name may express the functionality, but what if it returns a ceiling? Note that.
+## 1 What Diagrams Are Useful?
+::: tip Models are wrong
+A common phrase in engineering is "all models are wrong - some are useful"
 
-Define the problem and establish the objective.
-These are your boundaries. Stay within these boundaries.
+This statement indicates that just making a model or diagram does not make it useful and that no model or diagram can be the same exact thing as reality, only a reprentation. Therefore, it is a responsibility to consider what makes a model useful when deciding to create one.
+:::
 
-At a minimum, you need:
+In the software context, some of the most common and useful diagrams are:
+
+- **Flowcharts:** Flowcharts are used to represent workflows or processes in a system. They show the steps as boxes of various kinds, and their order by connecting them with arrows. They are often used to depict the logical steps a system should follow from start to finish.
+- **UML Diagrams:** Unified Modeling Language (UML) is a standardized modeling language used to visualize the design of a system. UML diagrams can represent various aspects of a system, such as class diagrams for structure, sequence diagrams for interactions, and use case diagrams for requirements.
+- **ER Diagrams:** Entity-Relationship (ER) diagrams are used to model data and how entities relate to each other within a database.
+- **Sequence Diagrams:** Sequence diagrams show how objects interact with each other in a specific use case of the system. They illustrate how messages and tasks are passed between objects and in what order.
+- **Architecture Diagrams:** These diagrams provide a high-level view of the system's structure. They can show how different components of the system interact with each other and with external systems.
+- **Data Flow Diagrams:** Data flow diagrams show how data moves through a system, where it comes from, where it goes, and how it's processed.
+- **Network Diagrams:** Network diagrams are used to represent the interaction between various devices in a network, including the internet, intranet, routers, servers, etc.
+
+## 2 Suggestions for Using Diagrams for a Big Picture View
+
+For many software contexts, useful diagrams that could create a big picture view are:
 1. an overview system architecture (OV1)
 2. a diagram of the dataflow (context diagram)
 
-If your application uses business logic or third party code, create an archimate diagram.
+If your application uses business logic or third party code, consider creating an archimate diagram as well.
+
+## 3 Tools for Creating Diagrams
+Similarly to the grammar context, creating there are many external tools and course to help with creating useful diagrams. We have provided you some background and references to learn more.
+
+- [Lucidchart](https://www.lucidchart.com/pages/) for making flow charts
+- [Draw.io](https://www.drawio.com/) for making flow charts or system level diagrams
+- [Microsoft PowerPoint](https://www.microsoft.com/en-us/microsoft-365/powerpoint) for generating high level system diagrams 
+
+
+
